--- a/templates/includes/components/grid_cards.html
+++ b/templates/includes/components/grid_cards.html
@@ -1,6 +1,6 @@
-<ul class="p-list grid-list u-clearfix col-12 u-no-padding--left u-no-margin--left">
+<ul class="p-matrix u-clearfix col-12">
     {% for page in pages %}
-        <li class="col-6 grid-list__item{% if forloop.last %} last-item{% endif %}{% cycle ' odd' ' even' %}">
+        <li class="col-6 p-matrix__item{% if forloop.last %} last-item{% endif %}{% cycle ' odd' ' even' %}">
             {% if page.image %}<div class="grid-list__image-container"><img class="grid-list__image" alt="{{ page.title }} logo" src="{{ page.image }}"></div>{% endif %}
             <div class="grid-list__description"><p>{{ page.description }}</p></div>
             <p class=""><a href="{{ page.path }}">Get started on {{ page.title }} &rsaquo;</a></p>
