--- a/templates/includes/components/page_cards.html
+++ b/templates/includes/components/page_cards.html
@@ -1,9 +1,10 @@
-<ul class="p-list grid-list u-clearfix col-12 u-no-padding--left u-no-margin--left">
+<ul class="p-matrix">
     {% for page in pages %}
-        <li class="col-6 grid-list__item{% if forloop.last %} last-item{% endif %}{% cycle ' odd' ' even' %}">
+        <li class="p-matrix__item">
             {% if page.image %}<div class="grid-list__image-container"><img class="grid-list__image" alt="{{ page.title }} logo" src="{{ page.image }}"></div>{% endif %}
-            <h5 class="grid-list__title"><a href="{{ page.path }}">{{ page.title }}</a></h5>
-            <div class="grid-list__description"><p>{{ page.description }}</p></div>
+            <div class="p-matrix__content">
+                <h5 class="p-matrix__title"><a href="{{ page.path }}">{{ page.title }}</a></h5>
+                <p class="p-matrix__desc">{{ page.description }}</p>
         </li>
     {% endfor %}
 </ul>
